basic data types

--- a/Basic data types tasks.ipynb
+++ b/Basic data types tasks.ipynb
@@ -127,9 +127,60 @@
   },
   {
    "metadata": {},
-   "cell_type": "markdown",
-   "source": "On going work ",
-   "id": "2ddbae88eaa6ced5"
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "#NESTED LISTS \n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    records = []\n",
+    "    for _ in range(int(input())):\n",
+    "        name = input()\n",
+    "        score = float(input())\n",
+    "        records.append([name, score])\n",
+    "\n",
+    "    # Recuperer toutes les notes\n",
+    "    scores = sorted({score for _, score in records})\n",
+    "\n",
+    "    # Deuxieme plus petite note\n",
+    "    second = scores[1]\n",
+    "\n",
+    "    # Etudiants ayant cette note\n",
+    "    result = sorted([name for name, score in records if score == second])\n",
+    "\n",
+    "    for name in result:\n",
+    "        print(name)\n"
+   ],
+   "id": "88d9f54f0d24bdfe"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# FIND THE PERCENTAGE\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    n = int(input())\n",
+    "    student_marks = {}\n",
+    "\n",
+    "    for _ in range(n):\n",
+    "        data = input().split()\n",
+    "        name = data[0]\n",
+    "        scores = list(map(float, data[1:]))\n",
+    "        student_marks[name] = scores\n",
+    "\n",
+    "    query_name = input()\n",
+    "\n",
+    "    # Calcul de la moyenne\n",
+    "    avg = sum(student_marks[query_name]) / len(student_marks[query_name])\n",
+    "\n",
+    "    # Affichage avec 2 decimales\n",
+    "    print(f\"{avg:.2f}\")\n"
+   ],
+   "id": "2b682b8cf532767f"
   },
   {
    "metadata": {},
@@ -145,6 +196,7 @@
    ],
    "execution_count": 2,
    "source": [
+    "#Tuples \n",
     "if __name__ == '__main__':\n",
     "    n = int(input().strip())\n",
     "    t = tuple(map(int, input().split()))\n",
