Uniformisation de la structure

--- a/Strings.ipynb
+++ b/Strings.ipynb
@@ -258,10 +258,13 @@
    "id": "be4f300d5f04615"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-25T08:40:33.653790Z",
+     "start_time": "2025-11-25T08:40:28.924570Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "#ALPHABET RANGOLI\n",
     "def print_rangoli(size):\n",
@@ -276,9 +279,30 @@
     "        lines.append(line.center(4*size-3, \"-\"))\n",
     "\n",
     "    # afficher le rangoli\n",
-    "    print(\"\\n\".join(lines[::-1] + lines[1:]))\n"
+    "    print(\"\\n\".join(lines[::-1] + lines[1:]))\n",
+    "if __name__ == '__main__':\n",
+    "    n = int(input())\n",
+    "    print_rangoli(n)"
    ],
-   "id": "ee8e497d5ab66332"
+   "id": "ee8e497d5ab66332",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------e--------\n",
+      "------e-d-e------\n",
+      "----e-d-c-d-e----\n",
+      "--e-d-c-b-c-d-e--\n",
+      "e-d-c-b-a-b-c-d-e\n",
+      "--e-d-c-b-c-d-e--\n",
+      "----e-d-c-d-e----\n",
+      "------e-d-e------\n",
+      "--------e--------\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "metadata": {},
