--- a/Basic data types tasks.ipynb
+++ b/Basic data types tasks.ipynb
@@ -2,62 +2,12 @@
  "cells": [
   {
    "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "\n",
-    "Let's learn about list comprehensions! You are given three integers x,y  and z representing the dimensions of a cuboid along with an integer n. Print a list of all possible coordinates given by (i,j,k) on a 3D grid where the sum of i+j+k is not equal to n. Here, 0<=i<=x;0<=j<=y;O<=k<=z. Please use list comprehensions rather than multiple loops, as a learning exercise.\n",
-    "\n",
-    "Example\n",
-    "x=1\n",
-    "y=1\n",
-    "z=2\n",
-    "n=3\n",
-    "All permutations of[i,j,k]  are:\n",
-    "[[0,0,0],[0,0,1],[0,0,2],....[],[],[1,1,2]]\n",
-    "Print an array of the elements that do not sum to n = 3.\n",
-    "[[0,0,0],[0,0,1],[0,0,2],....[],[1,1,0],[1,1,2]]\n",
-    "\n",
-    "Input Format\n",
-    "\n",
-    "Four integers x,y,z and n, each on a separate line.\n",
-    "\n",
-    "Constraints\n",
-    "\n",
-    "Print the list in lexicographic increasing order.\n",
-    "\n",
-    "Sample Input 0\n",
-    "\n",
-    "1\n",
-    "1\n",
-    "1\n",
-    "2\n",
-    "Sample Output 0\n",
-    "\n",
-    "[[0, 0, 0], [0, 0, 1], [0, 1, 0], [1, 0, 0], [1, 1, 1]]\n",
-    "Explanation 0\n",
-    "\n",
-    "Each variable x,y  and z will have values of 0 or 1. All permutations of lists in the form [[0,0,0],[0,0,1],[0,1,1],....[],[],[1,1,1]]\n",
-    ".\n",
-    "Remove all arrays that sum to n = 2  to leave only the valid permutations.\n",
-    "\n",
-    "Sample Input 1\n",
-    "\n",
-    "2\n",
-    "2\n",
-    "2\n",
-    "2\n",
-    "Sample Output 1\n",
-    "\n",
-    "[[0, 0, 0], [0, 0, 1], [0, 1, 0], [0, 1, 2], [0, 2, 1], [0, 2, 2], [1, 0, 0], [1, 0, 2], [1, 1, 1], [1, 1, 2], [1, 2, 0], [1, 2, 1], [1, 2, 2], [2, 0, 1], [2, 0, 2], [2, 1, 0], [2, 1, 1], [2, 1, 2], [2, 2, 0], [2, 2, 1], [2, 2, 2]]"
-   ],
-   "id": "b6c4e052deb79ed5"
-  },
-  {
-   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": [
+    "#List comprehensions\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    x = int(input())\n",
     "    y = int(input())\n",
@@ -79,41 +29,12 @@
   },
   {
    "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "Given the participants' score sheet for your University Sports Day, you are required to find the runner-up score. You are given  scores. Store them in a list and find the score of the runner-up.\n",
-    "\n",
-    "Input Format\n",
-    "\n",
-    "The first line contains n. The second line contains A [] an array   of  N integers each separated by a space.\n",
-    "\n",
-    "Constraints\n",
-    "2 <= n <= 10\n",
-    "-100 <= A[i] <= 100\n",
-    "\n",
-    "Output Format\n",
-    "\n",
-    "Print the runner-up score.\n",
-    "\n",
-    "Sample Input 0\n",
-    "\n",
-    "5\n",
-    "2 3 6 6 5\n",
-    "Sample Output 0\n",
-    "\n",
-    "5\n",
-    "Explanation 0\n",
-    "\n",
-    "Given list is [2,3,6,6,5] . The maximum score is , second maximum is . Hence, we print  as the runner-up score."
-   ],
-   "id": "e7b08527e60c6d26"
-  },
-  {
-   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": [
+    "#Find the runner-Up score!\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    n = int(input())\n",
     "    arr = map(int, input().split())\n",
