--- a/Introduction tasks.ipynb
+++ b/Introduction tasks.ipynb
@@ -2,37 +2,12 @@
  "cells": [
   {
    "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "Here is a sample line of code that can be executed in Python:\n",
-    "\n",
-    "print(\"Hello, World!\")\n",
-    "\n",
-    "You can just as easily store a string as a variable and then print it to stdout:\n",
-    "my_string = \"Hello, World!\"\n",
-    "print(my_string)\n",
-    "The above code will print Hello, World! on your screen. Try it yourself in the editor below!\n",
-    "\n",
-    "Input Format\n",
-    "\n",
-    "You do not need to read any input in this challenge.\n",
-    "\n",
-    "Output Format\n",
-    "\n",
-    "Print Hello, World! to stdout.\n",
-    "\n",
-    "Sample Output 0\n",
-    "\n",
-    "Hello, World!"
-   ],
-   "id": "495530c19d299b29"
-  },
-  {
-   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": [
+    "#Say \"Hello, World!\"\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    phrase = \"Hello, World!\"\n",
     "    print(phrase)"
@@ -41,52 +16,12 @@
   },
   {
    "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "Given an integer, , perform the following conditional actions:\n",
-    "\n",
-    "If  is odd, print Weird\n",
-    "If  is even and in the inclusive range of  to , print Not Weird\n",
-    "If  is even and in the inclusive range of  to , print Weird\n",
-    "If  is even and greater than , print Not Weird\n",
-    "\n",
-    "Input Format\n",
-    "A single line containing a positive integer, .\n",
-    "\n",
-    "Constraints\n",
-    "1<=n<=100\n",
-    "\n",
-    "Output Format\n",
-    "Print Weird if the number is weird. Otherwise, print Not Weird.\n",
-    "\n",
-    "Sample Input 0\n",
-    "3\n",
-    "\n",
-    "Sample Output 0\n",
-    "Weird\n",
-    "\n",
-    "Explanation 0\n",
-    "n = 3\n",
-    "n is odd and odd numbers are weird, so print Weird.\n",
-    "\n",
-    "Sample Input 1\n",
-    "24\n",
-    "\n",
-    "Sample Output 1\n",
-    "Not Weird\n",
-    "\n",
-    "Explanation 1\n",
-    "n = 24\n",
-    "n and  is even, so it is not weird."
-   ],
-   "id": "f21b868098f8724e"
-  },
-  {
-   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": [
+    "#Python If-Else\n",
+    "\n",
     "#!/bin/python3\n",
     "\n",
     "import math\n",
@@ -94,8 +29,6 @@
     "import random\n",
     "import re\n",
     "import sys\n",
-    "\n",
-    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    n = int(input().strip())\n",
@@ -110,50 +43,9 @@
     "                print(\"Not Weird\")\n",
     "            else:\n",
     "                print(\"Weird\")\n",
-    "            \n",
-    "    "
+    "            \n"
    ],
    "id": "f5adf1d3e7d5764e"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "The provided code stub reads two integers from STDIN, a and b. Add code to print three lines where:\n",
-    "\n",
-    "The first line contains the sum of the two numbers.\n",
-    "The second line contains the difference of the two numbers (first - second).\n",
-    "The third line contains the product of the two numbers.\n",
-    "Example\n",
-    "a = 3\n",
-    "b = 5\n",
-    "\n",
-    "Print the following:\n",
-    "8\n",
-    "-2\n",
-    "15\n",
-    "\n",
-    "Input Format\n",
-    "The first line contains the first integer,a .\n",
-    "The second line contains the second integer, b.\n",
-    "\n",
-    "Constraints\n",
-    "1<=a<=10°10(puissance)\n",
-    "1<=b<=10°10(puissance)\n",
-    "\n",
-    "Output Format\n",
-    "Print the three lines as explained above.\n",
-    "\n",
-    "Sample Input 0\n",
-    "\n",
-    "3\n",
-    "2\n",
-    "Sample Output 0\n",
-    "5\n",
-    "1\n",
-    "6\n"
-   ],
-   "id": "4777dffa64f2743"
   },
   {
    "metadata": {},
@@ -161,6 +53,8 @@
    "outputs": [],
    "execution_count": null,
    "source": [
+    "#Arithmetic Operators\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    a = int(input())\n",
     "    b = int(input())\n",
@@ -177,48 +71,12 @@
   },
   {
    "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "The provided code stub reads two integers, a and b, from STDIN.\n",
-    "\n",
-    "Add logic to print two lines. The first line should contain the result of integer division, a // b. The second line should contain the result of float division,a  /b .\n",
-    "\n",
-    "No rounding or formatting is necessary.\n",
-    "\n",
-    "Example\n",
-    "a = 3\n",
-    "b = 5\n",
-    "The result of the integer division .\n",
-    "The result of the float division is .\n",
-    "Print:\n",
-    "0\n",
-    "0.6\n",
-    "Input Format\n",
-    "\n",
-    "The first line contains the first integer, a.\n",
-    "The second line contains the second integer, b.\n",
-    "\n",
-    "Output Format\n",
-    "\n",
-    "Print the two lines as described above.\n",
-    "\n",
-    "Sample Input 0\n",
-    "4\n",
-    "3\n",
-    "\n",
-    "Sample Output 0\n",
-    "\n",
-    "1\n",
-    "1.33333333333"
-   ],
-   "id": "7441d03bc4b849d9"
-  },
-  {
-   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": [
+    "#Python Division\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    a = int(input())\n",
     "    b = int(input())\n",
@@ -232,45 +90,12 @@
   },
   {
    "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "The provided code stub reads an integer, , from STDIN. For all non-negative integers i < n, print i*i.\n",
-    "\n",
-    "Example\n",
-    "\n",
-    "The list of non-negative integers that are less than n = 3 is [0,1,2] . Print the square of each number on a separate line.\n",
-    "0\n",
-    "1\n",
-    "4\n",
-    "\n",
-    "Input Format\n",
-    "The first and only line contains the integer,n .\n",
-    "\n",
-    "Constraints\n",
-    "1<=n<=20\n",
-    "\n",
-    "Output Format\n",
-    "Print n lines, one corresponding to each .\n",
-    "\n",
-    "Sample Input 0\n",
-    "\n",
-    "5\n",
-    "Sample Output 0\n",
-    "\n",
-    "0\n",
-    "1\n",
-    "4\n",
-    "9\n",
-    "16"
-   ],
-   "id": "a4da93e4a8eebad3"
-  },
-  {
-   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": [
+    "#Loops\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    n = int(input())\n",
     "    for i in range(n): #range n cree un tableau de nombre de 0 a n-1\n",
@@ -280,51 +105,12 @@
   },
   {
    "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "An extra day is added to the calendar almost every four years as February 29, and the day is called a leap day. It corrects the calendar for the fact that our planet takes approximately 365.25 days to orbit the sun. A leap year contains a leap day.\n",
-    "\n",
-    "In the Gregorian calendar, three conditions are used to identify leap years:\n",
-    "\n",
-    "The year can be evenly divided by 4, is a leap year, unless:\n",
-    "The year can be evenly divided by 100, it is NOT a leap year, unless:\n",
-    "The year is also evenly divisible by 400. Then it is a leap year.\n",
-    "This means that in the Gregorian calendar, the years 2000 and 2400 are leap years, while 1800, 1900, 2100, 2200, 2300 and 2500 are NOT leap years. Source\n",
-    "\n",
-    "Task\n",
-    "\n",
-    "Given a year, determine whether it is a leap year. If it is a leap year, return the Boolean True, otherwise return False.\n",
-    "\n",
-    "Note that the code stub provided reads from STDIN and passes arguments to the is_leap function. It is only necessary to complete the is_leap function.\n",
-    "\n",
-    "Input Format\n",
-    "\n",
-    "Read year, the year to test.\n",
-    "\n",
-    "Constraints\n",
-    "1900<=year<=10**5(puissance)\n",
-    "\n",
-    "Output Format\n",
-    "The function must return a Boolean value (True/False). Output is handled by the provided code stub.\n",
-    "\n",
-    "Sample Input 0\n",
-    "1990\n",
-    "\n",
-    "Sample Output 0\n",
-    "False\n",
-    "\n",
-    "Explanation 0\n",
-    "\n",
-    "1990 is not a multiple of 4 hence it's not a leap year."
-   ],
-   "id": "465eee01467ac5fc"
-  },
-  {
-   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": [
+    "#Write a function\n",
+    "\n",
     "#year % 4 == 0 → divisible par 4\n",
     "#year % 100 != 0 → sauf les années multiples de 100\n",
     "#year % 400 == 0 → sauf si divisible par 400, alors c’est bissextile quand même\n",
@@ -343,39 +129,6 @@
    "id": "b76f23e5dbeff1ef"
   },
   {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "The included code stub will read an integer, , from STDIN.\n",
-    "\n",
-    "Without using any string methods, try to print the following:\n",
-    "123 ...n \n",
-    "\n",
-    "Note that \"...\" represents the consecutive values in between.\n",
-    "\n",
-    "Example\n",
-    "n = 5\n",
-    "Print the string 12345.\n",
-    "\n",
-    "Input Format\n",
-    "\n",
-    "The first line contains an integer .\n",
-    "\n",
-    "Constraints\n",
-    "1<=n<=150\n",
-    "Output Format\n",
-    "\n",
-    "Print the list of integers from n through  as a string, without spaces.\n",
-    "\n",
-    "Sample Input 0\n",
-    "3\n",
-    "\n",
-    "Sample Output 0\n",
-    "123"
-   ],
-   "id": "a1ccb2fa029c8cb4"
-  },
-  {
    "metadata": {
     "jupyter": {
      "is_executing": true
@@ -383,6 +136,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Print Function\n",
     "if __name__ == '__main__':\n",
     "    n = int(input())\n",
     "    for i in range(1,n+1):\n",
