--- a/Sets.ipynb
+++ b/Sets.ipynb
@@ -9,8 +9,502 @@
    },
    "outputs": [],
    "source": [
-    ""
+    "#Introduction to sets\n",
+    "\n",
+    "# créer un set\n",
+    "s = set([1, 2, 3, 4, 5])\n",
+    "print(s)  # {1, 2, 3, 4, 5}\n",
+    "\n",
+    "# ajouter un élément\n",
+    "s.add(6)\n",
+    "\n",
+    "# supprimer un élément (erreur si n'existe pas)\n",
+    "s.remove(3)\n",
+    "\n",
+    "# supprimer un élément (sans erreur si n'existe pas)\n",
+    "s.discard(10)\n",
+    "\n",
+    "# union et intersection\n",
+    "a = {1, 2, 3}\n",
+    "b = {2, 3, 4}\n",
+    "print(a.union(b))         # {1, 2, 3, 4}\n",
+    "print(a.intersection(b))  # {2, 3}\n",
+    "\n",
+    "\n",
+    "def average(array):\n",
+    "    s = set(array)  # convertir en set pour supprimer les doublons\n",
+    "    return sum(s)/len(s)\n",
+    "\n",
+    "# Exemple\n",
+    "n = int(input())\n",
+    "arr = list(map(int, input().split()))\n",
+    "print(average(arr))\n"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def no_idea():\n",
+    "    n, m = map(int, input().split())\n",
+    "    arr = list(map(int, input().split()))\n",
+    "    A = set(map(int, input().split()))\n",
+    "    B = set(map(int, input().split()))\n",
+    "\n",
+    "    happiness = 0\n",
+    "    for x in arr:\n",
+    "        if x in A:\n",
+    "            happiness += 1\n",
+    "        if x in B:\n",
+    "            happiness -= 1\n",
+    "    print(happiness)\n",
+    "\n",
+    "# Bloc main pour exécution\n",
+    "if __name__ == \"__main__\":\n",
+    "    no_idea()\n"
+   ],
+   "id": "f4764cc5f5b47bbe"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Symmetric_difference()()\n",
+    "\n",
+    "\n",
+    "# Enter your code here. Read input from STDIN. Print output to STDOUT\n",
+    "\n",
+    "def symmetric_difference():\n",
+    "    m = int(input())\n",
+    "    M = set(map(int, input().split()))\n",
+    "    n = int(input())\n",
+    "    N = set(map(int, input().split()))\n",
+    "\n",
+    "    diff = M.symmetric_difference(N)\n",
+    "    for x in sorted(diff):\n",
+    "        print(x)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    symmetric_difference()"
+   ],
+   "id": "f6510328f87861a1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Set.add()\n",
+    "\n",
+    "s = {1, 2, 3}\n",
+    "s.add(4)\n",
+    "print(s)  # {1, 2, 3, 4}\n",
+    "\n",
+    "s.add(2)\n",
+    "print(s)  # {1, 2, 3, 4} → 2 déjà présent, donc pas ajouté\n",
+    "\n",
+    "\n",
+    "def set_add():\n",
+    "    n = int(input())\n",
+    "    s = set()\n",
+    "\n",
+    "    for _ in range(n):\n",
+    "        cmd, *args = input().split()\n",
+    "        if cmd == \"add\":\n",
+    "            s.add(int(args[0]))\n",
+    "\n",
+    "    print(sum(s))\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    set_add()\n",
+    "\n"
+   ],
+   "id": "8b4ad18e42c081ad"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "#Set .discard(), .remove() & .pop()\n",
+    "\n",
+    "s = {1, 2, 3}\n",
+    "s.discard(2)\n",
+    "print(s)  # {1, 3}\n",
+    "\n",
+    "s.discard(5)  # 5 n'existe pas, pas d'erreur\n",
+    "print(s)  # {1, 3}\n",
+    "\n",
+    "\n",
+    "s = {1, 2, 3}\n",
+    "s.remove(2)\n",
+    "print(s)  # {1, 3}\n",
+    "\n",
+    "s.remove(5)  # KeyError ! → 5 n'existe pas\n",
+    "\n",
+    "\n",
+    "s = {1, 2, 3}\n",
+    "x = s.pop()\n",
+    "print(x)  # 1 (par exemple)\n",
+    "print(s)  # {2, 3} → l'élément retiré n’est plus là\n",
+    "\n",
+    "n = int(input())\n",
+    "s = set()\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    cmd = input().split()\n",
+    "    if cmd[0] == \"add\":\n",
+    "        s.add(int(cmd[1]))\n",
+    "    elif cmd[0] == \"discard\":\n",
+    "        s.discard(int(cmd[1]))\n",
+    "    elif cmd[0] == \"remove\":\n",
+    "        s.remove(int(cmd[1]))\n",
+    "    elif cmd[0] == \"pop\":\n",
+    "        s.pop()\n",
+    "\n",
+    "print(sum(s))"
+   ],
+   "id": "614ce491cfa46857"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "#Set .union() Operation\n",
+    "A = {1, 2, 3}\n",
+    "B = {3, 4, 5}\n",
+    "\n",
+    "# Méthode union\n",
+    "C = A.union(B)\n",
+    "print(C)  # {1, 2, 3, 4, 5}\n",
+    "\n",
+    "# Avec opérateur |\n",
+    "C = A | B\n",
+    "print(C)  # {1, 2, 3, 4, 5}\n",
+    "\n",
+    "# Lire le premier set\n",
+    "n = int(input())\n",
+    "A = set(map(int, input().split()))\n",
+    "\n",
+    "# Lire le deuxième set\n",
+    "m = int(input())\n",
+    "B = set(map(int, input().split()))\n",
+    "\n",
+    "# Union des deux sets\n",
+    "union_set = A.union(B)\n",
+    "\n",
+    "# Afficher le nombre d'éléments uniques\n",
+    "print(len(union_set))\n",
+    "\n"
+   ],
+   "id": "933b77abe5d5245f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Set.intersection() Operation\n",
+    "\n",
+    "\n",
+    "# Enter your code here. Read input from STDIN. Print output to STDOUT\n",
+    "# Lire le premier set\n",
+    "n = int(input())\n",
+    "A = set(map(int, input().split()))\n",
+    "\n",
+    "# Lire le deuxieme set\n",
+    "m = int(input())\n",
+    "B = set(map(int, input().split()))\n",
+    "\n",
+    "# Intersection des deux sets\n",
+    "intersection_set = A.intersection(B)\n",
+    "\n",
+    "# Afficher le nombre d'elements communs\n",
+    "print(len(intersection_set))\n"
+   ],
+   "id": "dd7dc9d98a5fdeec"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "#Set .difference() Operation\n",
+    "A = {1, 2, 3, 4}\n",
+    "B = {3, 4, 5}\n",
+    "\n",
+    "C = A.difference(B)\n",
+    "print(C)  # {1, 2} → éléments de A qui ne sont pas dans B\n",
+    "\n",
+    "# Avec opérateur -\n",
+    "C = A - B\n",
+    "print(C)  # {1, 2}\n",
+    "\n",
+    "\n",
+    "# Lire le premier set\n",
+    "n = int(input())\n",
+    "A = set(map(int, input().split()))\n",
+    "\n",
+    "# Lire le deuxième set\n",
+    "m = int(input())\n",
+    "B = set(map(int, input().split()))\n",
+    "\n",
+    "# Différence : éléments dans A mais pas dans B\n",
+    "diff_set = A.difference(B)\n",
+    "\n",
+    "# Afficher le nombre d'éléments restants\n",
+    "print(len(diff_set))\n"
+   ],
+   "id": "2552cab189dc252d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "#Set .symmetric_difference() Operation\n",
+    "\n",
+    "A = {1, 2, 3}\n",
+    "B = {2, 3, 4}\n",
+    "\n",
+    "C = A.symmetric_difference(B)\n",
+    "print(C)  # {1, 4} → 1 est dans A seulement, 4 dans B seulement\n",
+    "\n",
+    "# Avec opérateur ^\n",
+    "C = A ^ B\n",
+    "print(C)  # {1, 4}\n",
+    "\n",
+    "# Lire le premier set\n",
+    "m = int(input())\n",
+    "M = set(map(int, input().split()))\n",
+    "\n",
+    "# Lire le deuxième set\n",
+    "n = int(input())\n",
+    "N = set(map(int, input().split()))\n",
+    "\n",
+    "# Symmetric difference\n",
+    "diff = M.symmetric_difference(N)\n",
+    "\n",
+    "# Afficher les éléments triés\n",
+    "for x in sorted(diff):\n",
+    "    print(x)\n"
+   ],
+   "id": "17b70347bcc4f5b9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "#Set Mutations\n",
+    "\n",
+    "A = {1, 2, 3, 4, 5}\n",
+    "B = {2, 3}\n",
+    "\n",
+    "# A doit garder uniquement les éléments présents dans A et B\n",
+    "A.intersection_update(B)\n",
+    "print(A)  # {2, 3}\n",
+    "\n",
+    "\n",
+    "n = int(input())\n",
+    "A = set(map(int, input().split()))\n",
+    "m = int(input())\n",
+    "\n",
+    "for _ in range(m):\n",
+    "    op, *nums = input().split()\n",
+    "    B = set(map(int, nums[1:]))\n",
+    "    getattr(A, op)(B)  # appel dynamique de la méthode\n",
+    "\n",
+    "print(sum(A))\n",
+    "\n",
+    "# Lire le set A\n",
+    "n = int(input())\n",
+    "A = set(map(int, input().split()))\n",
+    "\n",
+    "# Nombre d'opérations\n",
+    "m = int(input())\n",
+    "\n",
+    "# Appliquer chaque opération\n",
+    "for _ in range(m):\n",
+    "    parts = input().split()\n",
+    "    op = parts[0]\n",
+    "    B = set(map(int, parts[2:]))  # les éléments commencent à l'indice 2\n",
+    "\n",
+    "    if op == \"update\":\n",
+    "        A.update(B)\n",
+    "    elif op == \"intersection_update\":\n",
+    "        A.intersection_update(B)\n",
+    "    elif op == \"difference_update\":\n",
+    "        A.difference_update(B)\n",
+    "    elif op == \"symmetric_difference_update\":\n",
+    "        A.symmetric_difference_update(B)\n",
+    "\n",
+    "# Afficher la somme finale\n",
+    "print(sum(A))\n",
+    "\n"
+   ],
+   "id": "4dc9e2e2c11e88fc"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "#The Captain's Room\n",
+    "\n",
+    "k = 3\n",
+    "rooms = [1, 2, 3, 2, 1, 3, 1, 3, 2, 4]\n",
+    "# Captain est 4\n",
+    "\n",
+    "\n",
+    "k = int(input())\n",
+    "rooms = list(map(int, input().split()))\n",
+    "\n",
+    "captain = (sum(set(rooms))*k - sum(rooms)) // (k-1)\n",
+    "print(captain)\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "id": "d14c4e20042ae25a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Check Subset\n",
+    "A.issubset(B)      # True si A ⊆ B\n",
+    "A <= B              # équivalent\n",
+    "\n",
+    "for _ in range(int(input())):\n",
+    "    A = set(map(int, input().split()))\n",
+    "    B = set(map(int, input().split()))\n",
+    "    print(A.issubset(B))\n",
+    "\n"
+   ],
+   "id": "83e14779c08bd7c2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "#Check Strict Superset\n",
+    "\n",
+    "A.issuperset(B)      # True si A ⊇ B\n",
+    "A > B                # strict superset\n",
+    "\n",
+    "\n",
+    "A = set(map(int, input().split()))\n",
+    "n = int(input())\n",
+    "result = all(A > set(map(int, input().split())) for _ in range(n))\n",
+    "print(result)\n"
+   ],
+   "id": "3dea87c2ddd85a96"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "fa3ea41d1d801cf9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "aec2d088d34cb155"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "598e1bf2e0e9e840"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3e6e4d050196a269"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "517d7eadb04c3fec"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "45c2b2d3105051ca"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "d998903e89256f31"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "6ff011281257b2e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "b62e9733787316ac"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "9b783fb6dec2411"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "c62a5fa6a679e1bd"
   }
  ],
  "metadata": {
